--- a/css/home.css
+++ b/css/home.css
@@ -33,6 +33,22 @@ img {
     max-width: 100%;
 }
 
+.btn {
+    width: 132px;
+    height: 35px;
+    color: #FFFFFF;
+    background-color: var(--verde);
+    border-radius: 30px;
+    font-size: 12px;
+    border: none;
+    transition: background-color 0.4s ease;
+    z-index: 50;
+}
+
+.btn:hover {
+    background-color: #4a8015;
+}
+
 /************************************************/
 /******************NAVBAR************************/
 /************************************************/
@@ -96,6 +112,47 @@ img {
     font-size: 32px;
     cursor: pointer;
 }
+
+/****************************************************/
+/*********** FIN NAVBAR *****************************/
+.hero {
+    background-image: url("../img/hero3.jpg");
+    width: 100%;
+    height: 25vh;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.hero::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+}
+
+.main_title_mobile {
+    color: #FFFFFF;
+    font-size: 18px;
+    z-index: 50;
+    margin-bottom: 20px;
+}
+
+.main_title_desktop {
+    display: none;
+}
+
+
 
 
 /*****************************************************/
@@ -175,6 +232,24 @@ img {
     .fa-bars {
         display: none !important;
     }
+
+    /****************************************************/
+    /*********** FIN NAVBAR *****************************/
+    .hero {
+        height: 45vh;
+    }
+
+    .main_title_mobile {
+        display: none;
+    }
+
+    .main_title_desktop {
+        display: flex;
+        color: #FFFFFF;
+        z-index: 50;
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
 }
 
 
@@ -210,5 +285,24 @@ img {
         font-size: 20px;
         padding: 0px 0px;
     }
-    
+    /****************************************************/
+    /*********** FIN NAVBAR *****************************/
+    .hero {
+        height: 70vh;
+    }
+
+    .main_title_desktop {
+        color: #FFFFFF;
+        z-index: 50;
+        font-size: 34px;
+        margin-bottom: 50px;
+    }
+
+    .btn {
+        width: 273px;
+        height: 77px;
+        font-size: 24px;
+        border-radius: 50px;
+    }
+
 }
