--- a/css/home.css
+++ b/css/home.css
@@ -93,6 +93,7 @@ img {
     width: 100%;
     top: 64px;
     background-color: var(--azul);
+    z-index: 100;
 }
 
 .navbar_item {
@@ -100,7 +101,7 @@ img {
     font-size: 12px;
     text-decoration: none;
     font-weight: bold;
-    padding: 10px 20px;
+    padding: 14px 20px;
 }
 
 .navbar_item:hover {
@@ -152,6 +153,72 @@ img {
     display: none;
 }
 
+.main {
+    width: 100%;
+    border: 2px solid red;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 40px;
+}
+
+.logo_uade {
+    border: 1px solid green;
+    width: 40%;
+    max-width: 254px;
+}
+
+.section_datos {
+    position: relative;
+    border: 2px solid pink;
+    width: 100%;
+    height: 100%;/*ver por cual medida cambiar*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 2;
+    padding-top: 40px;
+    padding-bottom: 150px;
+}
+
+.section_datos::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("../img/emblema_uade.png");
+    background-position: top center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    opacity: 0.1;
+    z-index: -1;
+}
+
+.dato_item {
+    border: 2px solid green;
+    width: 92%;
+    z-index: 101;
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    max-width: 454px;
+}
+
+.dato_title {
+    color: var(--azul);
+    font-size: 22px;
+    font-weight: 700;
+    margin-right: 10px;
+}
+
+.dato_description {
+    color: var(--gris);
+    font-size: 16px;
+    font-weight: 700;
+}
 
 
 
@@ -250,6 +317,19 @@ img {
         font-size: 20px;
         margin-bottom: 20px;
     }
+
+    .logo_uade {
+        width: 25%;
+    }
+
+    .section_datos {
+        padding-bottom: 100px;
+    }
+    
+    .dato_item {
+        width: 40%;
+    }
+    
 }
 
 
@@ -303,6 +383,37 @@ img {
         height: 77px;
         font-size: 24px;
         border-radius: 50px;
+    }
+
+    .section_datos {
+        position: relative;
+        border: 2px solid pink;
+        width: 100%;
+        height: 100%;/*ver por cual medida cambiar*/
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        z-index: 2;
+        padding-top: 140px;
+        padding-bottom: 150px;
+    }
+    
+    
+    .dato_item {
+        border: 2px solid green;
+        width: 45%;
+        z-index: 101;
+        display: flex;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+    
+    .dato_title {
+        font-size: 34px;
+    }
+    
+    .dato_description {
+        font-size: 22px;
     }
 
 }
