--- a/css/home.css
+++ b/css/home.css
@@ -383,6 +383,7 @@ img {
         margin-bottom: 0;
         justify-self: end;
         margin-right: 40px;
+        cursor: pointer;
     }
     
     .fa-sitemap {
