--- a/memorama/cards.css
+++ b/memorama/cards.css
@@ -1,5 +1,11 @@
 
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     /*background: url("./pokemon-bg.jpg");*/
     background: url("./memorama_img/bg3.jpeg");
@@ -7,29 +13,54 @@ body {
     background-position: center top;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
 }
 
-#board {
+/*.board {
     height: 532px;
-    /*width: 475px;*/
     width: 475px;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     background-color: whitesmoke;
     border: 10px solid lightgrey;
+}*/
+
+.popup_title {
+    margin-bottom: 10px;
 }
 
-.card {
+.board {
+    height: 100%;
+    width: 96%;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: whitesmoke;
+    border: 10px solid lightgrey;
+    justify-content: center;
+    gap: 2px;
+    margin-top: 10%;
+}
+
+/*.card {
     height: 128px;
     width: 90px;
     margin: 2.5px;
+}*/
+
+.card {
+    max-height: 150px;
+    height: 120px;
+    width: 24%;
 }
 
-
-
 .description_popup {
-    width: 320px;
+    /*width: 320px;*/
+    width: 90%;
+    max-width: 320px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -73,7 +104,7 @@ body {
 
 .popup_description {
     margin-bottom: 40px;
-    font-size: 16px;
+    font-size: 14px;
     color: #808080;
 }
 
@@ -87,4 +118,60 @@ body {
     font-size: 16px;
     color: white;
     box-shadow: 0px 6px 18px -5px rgb(53, 182, 41);
+}
+
+
+/******************************************************/
+/************** ESTILOS TABLET ************************/
+/******************************************************/
+@media (min-width: 768px) {
+    .board {
+        height: 100%;
+        width: 475px;
+        gap: 5px;
+        margin: 0 auto;
+        margin-top: 20px;
+    }
+
+    .card {
+        height: 130px;
+    }
+
+}
+
+/******************************************************/
+/************** ESTILOS desktop 1024************************/
+/******************************************************/
+@media (min-width: 1024px) {
+    .board {
+        height: 100%;
+        gap: 5px;
+        margin: 0 auto;
+        margin-top: 20px;
+    }
+
+    .card {
+        height: 130px;
+    }
+
+}
+
+/******************************************************/
+/************** ESTILOS desktop 1440************************/
+/******************************************************/
+@media (min-width: 1440px) {
+    .board {
+        height: 532px;
+        width: 475px;
+        border: 2px solid transparent;
+        gap: 5px;
+        margin: 0 auto;
+        margin-top: 20px;
+    }
+
+    .card {
+        height: 128px;
+        width: 90px;
+    }
+
 }
