--- a/css/juegos.css
+++ b/css/juegos.css
@@ -568,23 +568,34 @@ h1 {
 }
 
 .game-container img {
-    width: 100%;
-    max-width: 200px;
-    height: auto;
-    margin: 0 0 10px;
+    width: calc(100% - 20px); 
+    max-width: none; 
+    height: auto; 
+    margin: 0 10px 10px; 
+    display: block; 
 }
 
 .play-button {
     align-self: center;
     display: inline-block;
-    padding: 10px 20px;
-    background-color: #007bff;
+    /*padding: 15px 40px;*/
+    width: 150px;
+    height: 50px;
+    background-color: #65B418;
     color: #fff;
     text-decoration: none;
-    border-radius: 4px;
+    border-radius: 50px;
     text-align: center;
+    align-content: center;
 }
 
 .play-button:hover {
-    background-color: #0056b3;
+    background-color: #4a8015;
+}
+
+
+.eduvial_tittle {
+    color: var(--azul);
+    font-size: 28px;
+    font-weight: bold;
 }
