--- a/css/juegos.css
+++ b/css/juegos.css
@@ -548,9 +548,8 @@ h1 {
 }
 
 .game-container {
-    background-color: #fff7e6;
-    border: 1px solid #ddd;
-    border-radius: 8px;
+    background-color: rgba(101, 180, 24, 0.06);
+    border-radius: 20px;
     padding: 20px;
     margin: 20px 0;
     text-align: left;
