--- a/crush/style.css
+++ b/crush/style.css
@@ -1,10 +1,36 @@
+body {
+    background-image: url("crush_img/background.jpeg");
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    height: 100vh; 
+    margin: 0;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px; 
+}
+
+.score-board {
+    background-color: white;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5) inset, 0 1px 0 #fff;
+    color: #85796b;
+    font-family: "Roboto", sans-serif;
+    text-align: center;
+    width: 150px;
+    height: 100px;
+}
+
 .grid {
     height: 560px;
-    min-width: 560px;
+    width: 560px;
     display: flex;
     flex-wrap: wrap;
-    margin-left: 80px;
-    margin-top: 50px;
     background-color: rgba(109, 127, 151, 0.5);
     padding: 5px;
     border-radius: 10px;
@@ -17,14 +43,12 @@
     width: 70px;
 }
 
-h3 {
-    font-family: "Montserrat", sans-serif;
+h3, h1 {
+    font-family: "Roboto", sans-serif;
     text-transform: uppercase;
 }
 
 h1 {
-    font-family: "Montserrat", sans-serif;
-    text-transform: uppercase;
     margin-top: -10px;
 }
 
@@ -32,26 +56,20 @@ h1 {
     background-color: white;
 }
 
-body {
-    background-image: url("crush_img/background.jpeg");
-    max-width: 100vh;
-    display: flex;
+.return-button {
+    display: inline-block;
+    width: 150px;
+    height: 50px;
+    background-color: #65B418;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 50px;
+    text-align: center;
+    line-height: 50px; 
+    font-family: "Roboto", sans-serif;
+    cursor: pointer;
 }
 
-.score-board {
-    background-color: pink;
-    border-radius: 10px;
-    margin-top: 200px;
-    margin-left: 200px;
-    margin-bottom: 350px;
-    min-width: 200px;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-    background-image: linear-gradient(#FFB6C1, #FFC0CB);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5) inset, 0 1px 0 #fff;
-    color: #85796b;
+.return-button:hover {
+    background-color: #4a8015;
 }
