--- a/css/home.css
+++ b/css/home.css
@@ -146,7 +146,9 @@ img {
     color: #FFFFFF;
     font-size: 18px;
     z-index: 50;
-    margin-bottom: 20px;
+    text-align: center;
+    margin-bottom: 20px;    
+    border: 1px solid red;
 }
 
 .main_title_desktop {
@@ -170,13 +172,14 @@ img {
 .section_datos {
     position: relative;
     width: 100%;
-    height: 100%;/*ver por cual medida cambiar*/
+    height: 100%;
     display: flex;
-    flex-direction: column;
     align-items: center;
+    justify-content: center;
     z-index: 2;
-    padding-top: 40px;
-    padding-bottom: 150px;
+    /*padding-top: 80px;
+    padding-bottom: 130px;*/
+    border: 2px solid green;
 }
 
 .section_datos::before {
@@ -194,13 +197,27 @@ img {
     z-index: -1;
 }
 
+.datos_wrapper {
+    width: 100%;
+    height: 100%;
+    padding-top: 80px;
+    padding-bottom: 80px;
+    border: 3px solid blue;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    justify-self: center;
+}
+
 .dato_item {
-    width: 92%;
+    justify-content: center;
     z-index: 101;
     display: flex;
     align-items: center;
     margin-bottom: 20px;
     max-width: 454px;
+    border: 1px solid red;
+    
 }
 
 .dato_title {
