--- a/css/home.css
+++ b/css/home.css
@@ -148,7 +148,6 @@ img {
     z-index: 50;
     text-align: center;
     margin-bottom: 20px;    
-    border: 1px solid red;
 }
 
 .main_title_desktop {
@@ -179,7 +178,6 @@ img {
     z-index: 2;
     /*padding-top: 80px;
     padding-bottom: 130px;*/
-    border: 2px solid green;
 }
 
 .section_datos::before {
@@ -202,11 +200,11 @@ img {
     height: 100%;
     padding-top: 80px;
     padding-bottom: 80px;
-    border: 3px solid blue;
     display: flex;
     flex-direction: column;
     align-self: center;
     justify-self: center;
+    align-items: center;
 }
 
 .dato_item {
@@ -215,9 +213,7 @@ img {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
-    max-width: 454px;
-    border: 1px solid red;
-    
+    max-width: 454px;    
 }
 
 .dato_title {
@@ -239,7 +235,7 @@ img {
     background-color: #07102f;
     padding: 20px;
     color: #EEEDED;
-    font-size: 12px;
+    font-size: 10px;
     font-weight: 500;
     display: grid;
     grid-template-columns: 1fr;
@@ -370,6 +366,7 @@ img {
     }
 
     .main_title_desktop {
+        text-align: center;
         display: flex;
         color: #FFFFFF;
         z-index: 50;
@@ -532,6 +529,7 @@ img {
     
     .footer_copy {
         display: grid;
+        font-size: 14px;
         grid-template-columns: repeat(2, 1fr);
         margin-top: 20px;
         grid-column: 2/3;
@@ -539,12 +537,15 @@ img {
     }
 
     .footer_copy_description:nth-child(1) {
-        grid-column: 1/2;
-        justify-self: end;
+        grid-column: 1/3;
+        grid-row: 1/2;
+        text-align: center;
     }
 
-    .footer_copy_description:nth-child(3) {
+
+    .footer_copy_description:nth-child(2) {
         grid-column: 1/3;
+        grid-row: 2/3;
         text-align: center;
     }
     /********************* FIN FOOTER *******************/
