--- a/css/home.css
+++ b/css/home.css
@@ -230,6 +230,11 @@ img {
         height: 77px;
         font-size: 24px;
         border-radius: 50px;
+    } 
+
+    .btn a {
+        text-decoration: none;
+        color: #FFFFFF;
     }
 
     .section_datos {
