--- a/memorama/cards.css
+++ b/memorama/cards.css
@@ -8,6 +8,8 @@
 
 body {
     /*background: url("./pokemon-bg.jpg");*/
+    width: 100%;
+    height: 100vh;
     background: url("./memorama_img/bg3.jpeg");
     background-size: cover;
     background-position: center top;
@@ -16,7 +18,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    background-repeat: no-repeat;
 }
 
 /*.board {
@@ -34,7 +36,7 @@ body {
 }
 
 .board {
-    height: 100%;
+    height: 60%;
     width: 96%;
     display: flex;
     flex-wrap: wrap;
@@ -126,7 +128,6 @@ body {
 /******************************************************/
 @media (min-width: 768px) {
     .board {
-        height: 100%;
         width: 475px;
         gap: 5px;
         margin: 0 auto;
@@ -137,6 +138,15 @@ body {
         height: 130px;
     }
 
+    body {
+        /*background: url("./pokemon-bg.jpg");*/
+        background: url("./memorama_img/bg3.jpeg");
+        background-size: 100% 100%;
+        border: 1px solid red;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
 }
 
 /******************************************************/
@@ -144,7 +154,7 @@ body {
 /******************************************************/
 @media (min-width: 1024px) {
     .board {
-        height: 100%;
+        height: 50%;
         gap: 5px;
         margin: 0 auto;
         margin-top: 20px;
