--- a/css/juegos.css
+++ b/css/juegos.css
@@ -193,61 +193,7 @@ img {
 
 
 
-/*****************************************************/
-/*****************ESTILOS DESKTOP*********************/
-/*****************************************************/
 
-@media (min-width: 1024px) {
-    
-    .hero {
-        height: 70vh;
-    }
-
-    .main_title_desktop {
-        color: #FFFFFF;
-        z-index: 50;
-        font-size: 34px;
-        margin-bottom: 50px;
-    }
-
-    .btn {
-        width: 273px;
-        height: 77px;
-        font-size: 24px;
-        border-radius: 50px;
-    }
-
-    .section_datos {
-        position: relative;
-        width: 100%;
-        height: 100%;/*ver por cual medida cambiar*/
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        z-index: 2;
-        padding-top: 140px;
-        padding-bottom: 150px;
-    }
-    
-    
-    .dato_item {
-        width: 45%;
-        z-index: 101;
-        display: flex;
-        align-items: center;
-        margin-bottom: 20px;
-    }
-    
-    .dato_title {
-        font-size: 34px;
-    }
-    
-    .dato_description {
-        font-size: 22px;
-    }
-
-    
-}
 
 
 
@@ -255,7 +201,6 @@ img {
 
 .container {
     width: 90%;
-    max-width: 800px;
     text-align: center;
 }
 
@@ -279,14 +224,17 @@ h1 {
 }
 
 .game-container p {
-    margin: 0 0 10px;
+    margin-bottom: 20px;
+    color: #808080;
+    font-size: 16px;
+    line-height: 1.2;
 }
 
 .game-container img {
     width: calc(100% - 20px); 
     max-width: none; 
     height: auto; 
-    margin: 0 10px 10px; 
+    margin-bottom: 20px;
     display: block; 
 }
 
@@ -311,6 +259,36 @@ h1 {
 
 .eduvial_tittle {
     color: var(--azul);
-    font-size: 28px;
+    font-size: 26px;
     font-weight: bold;
+    margin-bottom: 60px;
+}
+
+/*****************************************************/
+/*****************ESTILOS DESKTOP*********************/
+/*****************************************************/
+
+@media (min-width: 1024px) {
+    .container {
+        width: 80%;
+    }
+
+    .eduvial_tittle {
+        font-size: 46px;
+        margin-bottom: 50px;
+    }
+    
+    .game-container p {
+        font-size: 24px;
+        line-height: 1.4;
+    }
+
+    .play-button {
+        width: 200px;
+        height: 50px;
+    }
+
+    .game-container {
+        padding: 40px;
+    }
 }
