--- a/css/footer.css
+++ b/css/footer.css
@@ -28,6 +28,11 @@
 .fa-sitemap {
     margin-bottom: 5px;
     font-size: 30px;
+    color: #FFF;
+}
+
+.mapa_sitio_description {
+    color: #FFF;
 }
 
 .footer_copy {
