--- a/css/juegos.css
+++ b/css/juegos.css
@@ -29,6 +29,88 @@
     font-style: normal;
 }
 
+.popup_title {
+    margin-bottom: 10px;
+    font-size: 25px;
+}
+
+.description_popup {
+    /*width: 320px;*/
+    width: 90%;
+    max-width: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fff;
+    color: #000;
+    border-radius: 20px;
+    padding: 30px 30px 70px;
+    max-height: 450px;
+}
+
+.overlay {
+    position: absolute;
+    align-items: center;
+    display: none;
+    justify-content: center;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    z-index: 200;
+    
+}
+
+.btn_wrapper {
+    display: flex;
+    align-items: center;
+    align-self: center;
+    max-width: 450px;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.btn_popup_close {
+    width: 30px;
+    font-size: 20px;
+    color: #c0c5cb;
+    align-self: flex-end;
+    background-color: transparent;
+    border: none;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.popup_img {
+    width: 120px;
+    margin-bottom: 15px;
+}
+
+.popup_description {
+    margin-bottom: 20px;
+    font-size: 16px;
+    color: #808080;
+    line-height: 1.4;
+}
+
+.btn_popup_accept {
+    background-color: #65b418;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 200px;
+    padding: 14px;
+    font-size: 16px;
+    color: white;
+    box-shadow: 0px 6px 18px -5px rgb(53, 182, 41);
+}
+
+.btn_popup_accept:hover {
+    background-color: #4a8015;
+}
+
+
 img {
     max-width: 100%;
 }
@@ -250,6 +332,8 @@ h1 {
     border-radius: 50px;
     text-align: center;
     align-content: center;
+    border: none;
+    cursor: pointer;
 }
 
 .play-button:hover {
