--- a/css/juegos.css
+++ b/css/juegos.css
@@ -45,16 +45,16 @@
     color: #000;
     border-radius: 20px;
     padding: 30px 30px 70px;
-    max-height: 450px;
+    max-height: 500px;
 }
 
 .overlay {
-    position: absolute;
+    position: fixed;
     align-items: center;
     display: none;
     justify-content: center;
-    top: 0;
     left: 0;
+    top: 0;
     background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 100%;
@@ -299,6 +299,7 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    position: relative;
 }
 
 .game-container h2 {
