--- a/candyCrush/styles.css
+++ b/candyCrush/styles.css
@@ -2,11 +2,21 @@ div {
 	/*border: 1px solid green;*/
 }
 
+.container {
+
+}
+
+
 body {
 	margin: auto;
-	vertical-align: middle;
+
 	font-weight: bold;
 	text-align: center;
+	justify-content: center;
+	align-items: center; 
+	display: flex;
+	flex-direction: column; 
+
 }
 
 img {
@@ -45,11 +55,6 @@ img {
 	z-index: 3;
 }
 
-#gameTitle {
-	font-weight: bold;
-	color: red;
-}
-
 #gameBoard {
 	z-index: 1;
 	margin: auto;
@@ -80,9 +85,11 @@ img {
 }
 
 #scoreLabel {
-	background-color: lightgrey;
-	width: 10em;
+	background-color: rgba(101, 180, 24, 0.06);
+	width: auto;
 }
+
+
 
 #cover {
 	z-index: 2;
@@ -122,7 +129,9 @@ img {
 
 h3, h1 {
     font-family: "Roboto", sans-serif;
-    text-transform: uppercase;
+    font-weight: 400;
+    font-style: normal;
+	color: #65B418;
 }
 
 h1 {
@@ -133,52 +142,34 @@ h1 {
     background-color: white;
 }
 
+
 .return-button {
     display: inline-block;
     width: 150px;
     height: 50px;
     background-color: #65B418;
-    color: #fff;
-    text-decoration: none;
+    color: #fff; 
+    text-decoration: none; 
     border-radius: 50px;
     text-align: center;
     line-height: 50px; 
     font-family: "Roboto", sans-serif;
     cursor: pointer;
+    align-self: center;
+    display: inline-block;
 }
 
 .return-button:hover {
     background-color: #4a8015;
+    color: #fff; 
+    text-decoration: none; 
 }
 
-.mostrarInstrucciones {
-    display: inline-block;
-    width: 150px;
-    height: 50px;
-    background-color: #65B418;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 50px;
-    text-align: center;
-    line-height: 50px; 
-    font-family: "Roboto", sans-serif;
-    cursor: pointer;
-}
-
-.mostrarInstrucciones-button:hover {
-    background-color: #4a8015;
-}
+/* Pop ups */ 
 
 
 
-@media (max-width: 600px) {
-    body {
-        width: 90%; 
-        height: auto; 
-        padding: 20px; 
-        margin: 10px auto; 
-    }
-}
+
 
 
 
