--- a/candyCrush/styles.css
+++ b/candyCrush/styles.css
@@ -2,9 +2,6 @@ div {
 	/*border: 1px solid green;*/
 }
 
-.container {
-
-}
 
 
 body {
@@ -16,6 +13,11 @@ body {
 	align-items: center; 
 	display: flex;
 	flex-direction: column; 
+
+	background-image: url('graphics/background.png'); 
+    background-size: cover; 
+	background-repeat: repeat;
+    background-position: center center; 
 
 }
 
@@ -85,7 +87,7 @@ img {
 }
 
 #scoreLabel {
-	background-color: rgba(101, 180, 24, 0.06);
+	background-color: rgba(101, 180, 24, 0.6);
 	width: auto;
 }
 
@@ -124,6 +126,8 @@ img {
     width: 150px;
     height: 100px;
     margin-top: 10px;
+	background-color: rgba(101, 180, 24, 0.6);
+	width: auto;
 }
 
 
@@ -131,7 +135,7 @@ h3, h1 {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-style: normal;
-	color: #65B418;
+	color: #172c02;
 }
 
 h1 {
