--- a/candyCrush/styles.css
+++ b/candyCrush/styles.css
@@ -13,12 +13,11 @@ body {
 	align-items: center; 
 	display: flex;
 	flex-direction: column; 
-
+	height: 100vh;
 	background-image: url('graphics/background.png'); 
     background-size: cover; 
-	background-repeat: repeat;
-    background-position: center center; 
-
+	background-repeat: no-repeat;
+    background-position: center; 
 }
 
 img {
