Agregado de Preguntas
Se agregan mas preguntas para poder resolver en los 2m

--- a/preguntados/styles.css
+++ b/preguntados/styles.css
@@ -39,19 +39,23 @@ body {
 }
 
 #question-container {
-    margin-top: 3vw;
-    height: 30vw;
+    margin-top: 3vh;
+    height: 65vh;
 }
 
 #answer-buttons {
-    margin-top: 3vw;
+    margin-top: 4vh;
+}
+
+#answer-buttons {
+    margin-top: 4vh;
 }
 
 #question-image {
-    max-width: 20vw;
-    max-height: 15vw;
+    max-width: 30vw;
+    max-height: 35vh;
     border-radius: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 1vh;
 }
 
 .btn-grid {
