--- a/css/home.css
+++ b/css/home.css
@@ -68,6 +68,7 @@ img {
     justify-content: center;
     padding-left: 30px;
     padding-right: 30px;
+    margin-top: 117px;
 }
 
 .hero::after {
