Correccion sticky header espaciado

--- a/css/juegos.css
+++ b/css/juegos.css
@@ -348,6 +348,7 @@ h1 {
     font-size: 26px;
     font-weight: bold;
     margin-bottom: 60px;
+    margin-top: 117px;
 }
 
 /*****************************************************/
