--- a/memorama/cards.css
+++ b/memorama/cards.css
@@ -21,8 +21,7 @@
     font-size: 16px;
     border: none;
     transition: background-color 0.4s ease;
-    z-index: 50;
-    margin-top: 140px;
+    margin-top: 20px;
 }
 
 .btn a {
@@ -35,7 +34,6 @@
 }
 
 body {
-    /*background: url("./pokemon-bg.jpg");*/
     width: 100%;
     height: 100vh;
     background: url("./memorama_img/bg3.jpeg");
@@ -49,41 +47,28 @@ body {
     background-repeat: no-repeat;
 }
 
-/*.board {
-    height: 532px;
-    width: 475px;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    background-color: whitesmoke;
-    border: 10px solid lightgrey;
-}*/
 
 .popup_title {
     margin-bottom: 10px;
 }
 
 .board {
-    height: 60%;
-    width: 96%;
+    width: 90%;
     display: flex;
     flex-wrap: wrap;
     background-color: whitesmoke;
     border: 10px solid lightgrey;
     justify-content: center;
     gap: 2px;
-    margin-top: 10%;
+    margin-top: 10px;
 }
 
-/*.card {
-    height: 128px;
-    width: 90px;
-    margin: 2.5px;
-}*/
 
 .card {
     max-height: 150px;
-    height: 120px;
+    max-width: 112px;
+    /*min-width: 100px;*/
+    max-height: 120px;
     width: 24%;
 }
 
@@ -156,7 +141,7 @@ body {
 /******************************************************/
 @media (min-width: 768px) {
     .btn {
-        margin-top: 40px;
+        margin-top: 20px;
     }
 
     .board {
@@ -167,14 +152,12 @@ body {
     }
 
     .card {
-        height: 130px;
+        max-height: 110px;
     }
 
     body {
-        /*background: url("./pokemon-bg.jpg");*/
         background: url("./memorama_img/bg3.jpeg");
         background-size: 100% 100%;
-        border: 1px solid red;
         background-repeat: no-repeat;
         background-position: center;
     }
@@ -186,7 +169,8 @@ body {
 /******************************************************/
 @media (min-width: 1024px) {
     .board {
-        height: 50%;
+        /*height: 50%;*/
+        max-width: 475px;
         gap: 5px;
         margin: 0 auto;
         margin-top: 20px;
@@ -203,7 +187,7 @@ body {
 /******************************************************/
 @media (min-width: 1440px) {
     .board {
-        height: 532px;
+        max-height: 532px;
         width: 475px;
         border: 2px solid transparent;
         gap: 5px;
